[project]
name = "brand-origin"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin",email = "chan.kevin@outlook.fr"}
]
readme = "README.org"
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "aiodns (>=3.2.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
